--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kinky Bun Lingerie Trends in New York</title>
+    <title>Kinky Bun Lingerie: New York Collection</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,46 +11,40 @@
         <h1>Discover Kinky Bun Lingerie in New York</h1>
         <nav>
             <ul>
-                <li><a href="https://kinkybun.com">Home</a></li>
-                <li><a href="https://kinkybun.com/collections">Collections</a></li>
-                <li><a href="https://kinkybun.com/about">About Us</a></li>
-                <li><a href="https://kinkybun.com/contact">Contact</a></li>
-                <li><a href="https://kinkybun.com/blog">Blog</a></li>
+                <li><a href="https://www.kinkybun.com">Home</a></li>
+                <li><a href="https://www.kinkybun.com">Collections</a></li>
+                <li><a href="https://www.kinkybun.com">About Us</a></li>
+                <li><a href="https://www.kinkybun.com">Contact</a></li>
+                <li><a href="https://www.kinkybun.com">Blog</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h2>Explore the Latest Lingerie Trends in New York for 2024</h2>
-        <p>Welcome to <a href="https://kinkybun.com">Kinky Bun</a>, your go-to source for the hottest lingerie trends in New York. Our 2024 collection features bold colors, seamless designs, intricate lace details, high-waisted silhouettes, vinyl pieces, and plus-size options.</p>
+        <h2>Lingerie Trends for 2024 in New York</h2>
+        <p>Welcome to <a href="https://www.kinkybun.com">Kinky Bun</a>, your destination for the latest lingerie trends in New York. Our 2024 collection showcases bold colors, seamless designs, intricate lace, high-waisted styles, vinyl pieces, and plus-size options.</p>
         
-        <h3>Trending Styles for 2024 in New York</h3>
+        <h3>Top Trends for 2024</h3>
         <ul>
-            <li><a href="https://kinkybun.com/collections/bold-colours">Bold Colours</a></li>
-            <li><a href="https://kinkybun.com/collections/seamless">Seamless Designs</a></li>
-            <li><a href="https://kinkybun.com/collections/lace">Lace Lingerie</a></li>
-            <li><a href="https://kinkybun.com/collections/high-waist">High Waist Silhouettes</a></li>
-            <li><a href="https://kinkybun.com/collections/vinyl">Vinyl Pieces</a></li>
-            <li><a href="https://kinkybun.com/collections/plus-size">Plus Size</a></li>
+            <li><a href="https://www.kinkybun.com">Bold Colours</a></li>
+            <li><a href="https://www.kinkybun.com">Seamless Designs</a></li>
+            <li><a href="https://www.kinkybun.com">Lace Lingerie</a></li>
+            <li><a href="https://www.kinkybun.com">High Waist Silhouettes</a></li>
+            <li><a href="https://www.kinkybun.com">Vinyl Pieces</a></li>
+            <li><a href="https://www.kinkybun.com">Plus Size</a></li>
         </ul>
 
-        <h3>Explore Our New York Collection</h3>
-        <p>Check out some of our favorite pieces available now:</p>
+        <h3>Our Favorite Picks</h3>
+        <p>Explore some of our top selections available now:</p>
         <ul>
-            <li><a href="https://kinkybun.com/collections/bold-colours/item1">Bold Colour Set</a></li>
-            <li><a href="https://kinkybun.com/collections/seamless/item2">Seamless Comfort Bra</a></li>
-            <li><a href="https://kinkybun.com/collections/lace/item3">Lace Bralette</a></li>
-            <li><a href="https://kinkybun.com/collections/high-waist/item4">High Waist Briefs</a></li>
-            <li><a href="https://kinkybun.com/collections/vinyl/item5">Vinyl Bodysuit</a></li>
-            <li><a href="https://kinkybun.com/collections/plus-size/item6">Plus Size Chemise</a></li>
+            <li><a href="https://www.kinkybun.com">Bold Colour Set</a></li>
+            <li><a href="https://www.kinkybun.com">Seamless Comfort Bra</a></li>
+            <li><a href="https://www.kinkybun.com">Lace Bralette</a></li>
+            <li><a href="https://www.kinkybun.com">High Waist Briefs</a></li>
+            <li><a href="https://www.kinkybun.com">Vinyl Bodysuit</a></li>
+            <li><a href="https://www.kinkybun.com">Plus Size Chemise</a></li>
         </ul>
 
-        <h3>Connect With Us</h3>
-        <p>Stay updated with the latest trends and exclusive offers by following <a href="https://kinkybun.com/blog">our blog</a> and connecting with us on social media. Explore our extensive range of products and find your perfect fit at <a href="https://kinkybun.com">Kinky Bun</a>.</p>
+        <h3>Stay Connected</h3>
+        <p>Stay updated with the latest trends and exclusive offers by following <a href="https://www.kinkybun.com">our blog</a> and connecting with us on social media. Find your perfect fit at <a href="https://www.kinkybun.com">Kinky Bun</a>.</p>
 
-        <p>We are excited to bring the best of our collection to New York, offering high-quality lingerie that embodies bold colors, seamless designs, intricate lace, high-waisted styles, vinyl pieces, and plus-size options. Visit <a href="https://kinkybun.com">Kinky Bun</a> for more.</p>
-    </main>
-    <footer>
-        <p>&copy; 2024 Kinky Bun. All Rights Reserved. Visit <a href="https://kinkybun.com">Kinky Bun</a> for more.</p>
-    </footer>
-</body>
-</html>
+        <p>We are thrilled to bring our collection to New York, offering high-quality lingerie that features bold colors, se
